<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".activities.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_background"
        android:gravity="center"
        android:onClick="onApplyClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_night"
        app:layout_constraintEnd_toStartOf="@+id/layout_outdoor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="@dimen/width_situ_icon"
            android:layout_height="@dimen/height_situ_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_home"
            android:textSize="@dimen/size_situ_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_home" />

        <TextView
            android:id="@+id/setting_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_apply_margin"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:onClick="onSettingClick"
            android:padding="@dimen/size_apply_padding"
            android:text="@string/string_setting_save"
            android:textSize="@dimen/size_apply_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_outdoor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_background"
        android:gravity="center"
        android:onClick="onApplyClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layout_alpha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_home"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_outdoor"
            android:layout_width="@dimen/width_situ_icon"
            android:layout_height="@dimen/height_situ_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cloud" />

        <TextView
            android:id="@+id/text_outdoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_outdoor"
            android:textSize="@dimen/size_situ_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_outdoor" />

        <TextView
            android:id="@+id/setting_outdoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_apply_margin"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:onClick="onSettingClick"
            android:padding="@dimen/size_apply_padding"
            android:text="@string/string_setting_save"
            android:textSize="@dimen/size_apply_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_night"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_background"
        android:gravity="center"
        android:onClick="onApplyClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_home">

        <ImageView
            android:id="@+id/image_night"
            android:layout_width="@dimen/width_situ_icon"
            android:layout_height="@dimen/height_situ_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_brightness" />

        <TextView
            android:id="@+id/text_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_night"
            android:textSize="@dimen/size_situ_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_night" />

        <TextView
            android:id="@+id/setting_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_apply_margin"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:onClick="onSettingClick"
            android:padding="@dimen/size_apply_padding"
            android:text="@string/string_setting_save"
            android:textSize="@dimen/size_apply_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_alpha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_background"
        android:gravity="center"
        android:onClick="onApplyClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_night"
        app:layout_constraintTop_toBottomOf="@+id/layout_outdoor">

        <ImageView
            android:id="@+id/image_alpha"
            android:layout_width="@dimen/width_situ_icon"
            android:layout_height="@dimen/height_situ_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <TextView
            android:id="@+id/text_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_alpha"
            android:textSize="@dimen/size_situ_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_alpha" />

        <TextView
            android:id="@+id/setting_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_apply_margin"
            android:background="@drawable/ripple_background"
            android:clickable="true"
            android:onClick="onSettingClick"
            android:padding="@dimen/size_apply_padding"
            android:text="@string/string_setting_save"
            android:textSize="@dimen/size_apply_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_help"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onHelpClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_help_outline" />
</androidx.constraintlayout.widget.ConstraintLayout>